@@ -40,7 +40,7 @@ shaken test rules = do
             (flags,args) <- return $ partition ("-" `isPrefixOf`) args
             let f o x = let x2 = dropWhile (== '-') x in case lookup x2 flagList of
                     Just op -> op o
-                    Nothing | "threads" `isPrefixOf` x2 -> o{shakeParallel=read $ drop 7 x2}
+                    Nothing | "threads" `isPrefixOf` x2 -> o{shakeThreads=read $ drop 7 x2}
                             | otherwise -> error $ "Don't know how to deal with flag: " ++ x
             let opts = foldl' f shakeOptions{shakeFiles=out, shakeDump=True} $ flags
             shake opts $ rules args (out++)
