@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Rename shakeParallel to shakeThreads
     Delete the lint support (never actually worked)
     Completely rewrite the central build algorithm
     Add verbosity Diagnostic
